--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div class="row">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text hour">
+              9 AM
+            </span>
+          </div>
+          <textarea class="form-control" aria-label="With textarea" id="9 AM"></textarea>
+          <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+        </div>
+      </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
