--- a/index.html
+++ b/index.html
@@ -44,6 +44,126 @@
       </div>
     </div>
 
+    <div class="container">
+      <!-- Timeblocks go here -->
+      <div class="row">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text hour">
+              10 AM
+            </span>
+          </div>
+          <textarea class="form-control" aria-label="With textarea" id="10 AM"></textarea>
+          <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <!-- Timeblocks go here -->
+      <div class="row">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text hour">
+              11 AM
+            </span>
+          </div>
+          <textarea class="form-control" aria-label="With textarea" id="11 AM"></textarea>
+          <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <!-- Timeblocks go here -->
+      <div class="row">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text hour">
+              12 PM
+            </span>
+          </div>
+          <textarea class="form-control" aria-label="With textarea" id="12 PM"></textarea>
+          <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+        </div>
+      </div>
+    </div>
+    
+    <div class="container">
+      <!-- Timeblocks go here -->
+      <div class="row">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text hour">
+              1 PM
+            </span>
+          </div>
+          <textarea class="form-control" aria-label="With textarea" id="1 PM"></textarea>
+          <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <!-- Timeblocks go here -->
+      <div class="row">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text hour">
+              2 PM
+            </span>
+          </div>
+          <textarea class="form-control" aria-label="With textarea" id="2 PM"></textarea>
+          <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <!-- Timeblocks go here -->
+      <div class="row">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text hour">
+              3 PM
+            </span>
+          </div>
+          <textarea class="form-control" aria-label="With textarea" id="3 PM"></textarea>
+          <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <!-- Timeblocks go here -->
+      <div class="row">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text hour">
+              4 PM
+            </span>
+          </div>
+          <textarea class="form-control" aria-label="With textarea" id="4 PM"></textarea>
+          <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <!-- Timeblocks go here -->
+      <div class="row">
+        <div class="input-group">
+          <div class="input-group-prepend">
+            <span class="input-group-text hour">
+              5 PM
+            </span>
+          </div>
+          <textarea class="form-control" aria-label="With textarea" id="5 PM"></textarea>
+          <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+        </div>
+      </div>
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
